--- a/01_model_prompt_parser.ipynb
+++ b/01_model_prompt_parser.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GOOGLE_API_KEY = \"AIzaSyBhgiebkAGhig5nNAHho3AWsm46lUMsdPc\"\n",
+    "GOOGLE_API_KEY = \"YOUR_KEY\"\n",
     "os.environ['GOOGLE_API_KEY'] = GOOGLE_API_KEY\n",
     "genai.configure(api_key = os.environ['GOOGLE_API_KEY'])"
    ]
