--- a/02_memory.ipynb
+++ b/02_memory.ipynb
@@ -19,7 +19,7 @@
     "import os\n",
     "import google.generativeai as genai\n",
     "\n",
-    "GOOGLE_API_KEY = \"AIzaSyBhgiebkAGhig5nNAHho3AWsm46lUMsdPc\"\n",
+    "GOOGLE_API_KEY = \"YOUR_KEY\"\n",
     "os.environ['GOOGLE_API_KEY'] = GOOGLE_API_KEY\n",
     "genai.configure(api_key = os.environ['GOOGLE_API_KEY'])"
    ]
