--- a/03_chains.ipynb
+++ b/03_chains.ipynb
@@ -11,7 +11,7 @@
     "import google.generativeai as genai\n",
     "import pandas as pd\n",
     "\n",
-    "GOOGLE_API_KEY = \"AIzaSyBhgiebkAGhig5nNAHho3AWsm46lUMsdPc\"\n",
+    "GOOGLE_API_KEY = \"YOUR_KEY\"\n",
     "os.environ['GOOGLE_API_KEY'] = GOOGLE_API_KEY\n",
     "genai.configure(api_key = os.environ['GOOGLE_API_KEY'])"
    ]
